# DashBorad-project

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
dashboards_project/: __init__.py
